--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -49,7 +49,7 @@
     "email_placeholder": "Your email address",
     "button_name": "Subscribe",
     "newsletter_popup_enable": false,
-    "one_day_popup_enable": true,
+    "one_day_popup_enable": false,
     "newletter_popup_title": "Newsletter",
     "newsletter_text": "Join over 1,000 people who get free and fresh content delivered automatically each time we publish",
     "newsletter_button_name": "Subscribe",
